--- a/src/app/pages/course/update/update.course.component.html
+++ b/src/app/pages/course/update/update.course.component.html
@@ -14,37 +14,31 @@
             <h3 class="mb-0">Create/Update Course</h3>
           </div>
           <div class="col-4 text-right">
-            <a href="/system-admin/course" class="btn btn-sm btn-info mr-4">Back</a>
-            <a href="javascript:void(0)" class="btn btn-sm btn-default float-right">Save</a>
+            <form formGroup="dataForm" (ngSubmit)="save()">
+            <a routerLink="/system-admin/course" class="btn btn-sm btn-info mr-4">Back</a>
+            <a routerLink="/system-admin/course"  class="btn btn-sm btn-default float-right">Save</a>
+          </form>
           </div>
         </div>
       </div>
       <div class="card-body">
-        <form>
+        <form formGroup="dataForm" (ngSubmit)="save()">
           <div class="pl-lg-4">
-            <div class="row">
+            <div class="row"> 
               <div class="col-lg-6">
-                <div class="form-group" style="display: none;">
-                  <label class="form-control-label" for="input-id">ID :</label>
-                  <input type="text" id="input-id" class="form-control form-control-alternative"
-                    placeholder="ID Lesson">
-                </div>
-              </div>
-              <div class="col-lg-4">
                 <div class="form-group">
                   <label class="form-control-label" for="input-title">Thumbnail:</label>
-                  
                   <!-- Hiển thị ảnh đã chọn -->
-                  <img *ngIf="thumbnailPath" [src]="thumbnailPath" alt="Thumbnail" class="img-thumbnail mb-2" style="max-width: 100%; height: auto;">
-              
+                  <img *ngIf="thumbnail" [src]="thumbnail" alt="Thumbnail" class="img-thumbnail mb-2"
+                    style="max-width: 100%; height: auto;">
                   <!-- Nút chọn file -->
                   <div class="custom-file">
                     <input type="file" class="custom-file-input" id="input-thumbnail" (change)="onFileSelected($event)">
-                    <label class="custom-file-label" for="input-thumbnail">Chọn ảnh</label>
+                    <label class="custom-file-label" for="input-thumbnail">Upload Images</label>
                   </div>
                 </div>
               </div>
-              <div class="col-lg-4">
+              <div class="col-lg-6">
                 <div class="form-group">
                   <label class="form-control-label" for="input-title">Title :</label>
                   <input type="text" id="input-title" class="form-control form-control-alternative" placeholder="Title">
@@ -58,23 +52,18 @@
               </div>
               <div class="col-lg-6">
                 <div class="form-group">
-                  <label class="form-control-label" for="input-enrollmentCount">Enrollment Count :</label>
-                  <input type="text" id="input-enrollmentCount" class="form-control form-control-alternative"
-                    placeholder="Enrollment Count">
-                </div>
-              </div>
-              <div class="col-lg-6">
-                <div class="form-group">
                   <label class="form-control-label" for="input-userID">User :</label>
-                  <input type="text" id="input-userID" class="form-control form-control-alternative"
-                    placeholder="User">
+                  <input type="text" id="input-userID" class="form-control form-control-alternative" placeholder="User">
                 </div>
               </div>
               <div class="col-lg-6">
                 <div class="form-group">
-                  <label class="form-control-label" for="input-categoryID">Category :</label>
-                  <input type="text" id="input-categoryID" class="form-control form-control-alternative"
-                    placeholder="Category">
+                  <label class="form-control-label" for="input-categoryID">Category:</label>
+                  <select id="input-categoryID" class="form-control form-control-alternative" [(ngModel)]="course?.category.id">
+                    <option *ngFor="let category of categories" [value]="category.id">
+                      {{ category.name }}
+                    </option>
+                  </select>
                 </div>
               </div>
               <div class="col-lg-6">
@@ -84,18 +73,30 @@
                     placeholder="Description"></textarea>
                 </div>
               </div>
+              <div class="col-lg-6" style="display: none;">
+                <div class="form-group">
+                  <label class="form-control-label" for="input-enrollmentCount">Enrollment Count :</label>
+                  <input type="text" id="input-enrollmentCount" class="form-control form-control-alternative"
+                    placeholder="Enrollment Count">
+                </div>
+              </div>
+              <div class="col-lg-6">
+                <div class="form-group" style="display: none;">
+                  <label class="form-control-label" for="input-id">ID :</label>
+                  <input type="text" id="input-id" class="form-control form-control-alternative" placeholder="ID Lesson">
+                </div>
+              </div>
               <div class="col-lg-12">
                 <div class="form-group">
                   <label class="form-control-label" for="input-status">Status</label>
                   <div class="control" class="form-check form-switch form-switch-md mb-5">
-                    <input type="checkbox" id="is_delete" name="is_delete" class="form-check-input"
-                      formControlName="is_delete">
+                    <input type="checkbox" id="is_delete" name="is_delete" class="form-check-input" formControlName="is_delete">
                   </div>
                 </div>
               </div>
             </div>
           </div>
-        </form>
+        </form> 
       </div>
     </div>
   </div>
