--- a/src/app/pages/section/list/section.component.html
+++ b/src/app/pages/section/list/section.component.html
@@ -59,8 +59,7 @@
                         <i class="fas fa-ellipsis-v"></i>
                       </a>
                       <div ngbDropdownMenu class=" dropdown-menu-right dropdown-menu-arrow">
-                        <a class="dropdown-item" [routerLink]="'/system-admin/category/{id}/edit'"
-                          href="javascript:void(0)">Xem</a>
+                        <a class="dropdown-item" [routerLink]="'/system-admin/category/{id}/edit'">Xem</a>
                         <a class="dropdown-item" href="javascript:void(0)">Cập nhật</a>
                         <a class="dropdown-item" href="javascript:void(0)">Xóa</a>
                       </div>
