--- a/src/app/pages/lesson/list/lesson.component.html
+++ b/src/app/pages/lesson/list/lesson.component.html
@@ -13,12 +13,14 @@
         <div class="card shadow">
           <div class="card-header border-0">
             <div class="d-flex justify-content-between">
-              <div style="display: flex; align-items: center; gap: 10px;">
-                <input type="text" placeholder="Search..." class="form-control" style="flex: 1;">
-                <a href="#!" class="btn btn-info">Search</a>
-              </div>
+              <form [formGroup]="searchForm" (ngSubmit)="loadPage()">
+                <div style="display: flex; align-items: center; gap: 10px;">
+                  <input type="text" placeholder="Search..." class="form-control" style="flex: 1;" formControlName="keyword">
+                  <button type="submit" class="btn btn-info">Search</button>
+                </div>
+              </form>
               <div class="text-right">
-                <a [routerLink]="'/system-admin/category/new'" class="btn btn-sm btn-primary">Thêm mới</a>
+                <a [routerLink]="'/system-admin/lesson/new'" class="btn btn-sm btn-primary">Thêm mới</a>
               </div>
             </div>
           </div>
@@ -28,28 +30,33 @@
               <thead class="thead-light">
                 <tr>
                   <th scope="col">STT</th>
-                  <th scope="col">Tên</th>
-                  <th scope="col">Trạng thái</th>
-                  <th scope="col">Parent Id</th>
+                  <th scope="col">Tiêu đề</th>
+                  <th scope="col">Thời gian</th>
+                  <th scope="col">Đường dẫn video</th>
+                  <th scope="col">Bài học</th>
                   <th scope="col"></th>
                 </tr>
               </thead>
               <tbody>
-                <tr>
+                <tr *ngFor="let item of lessons; let i = index">
                   <th scope="row">
                     <div class="media align-items-center">
                       <div class="media-body">
-                        <span class="mb-0 text-sm">Argon Design System</span>
+                        <span class="mb-0 text-sm">{{ i + 1 }}</span>
                       </div>
                     </div>
                   </th>
                   <td>
-                    Argon Design System
+                    {{ item.title }}
                   </td>
                   <td>
-                    <span class="badge badge-dot mr-4">
-                      <i class="bg-warning"></i> pending
-                    </span>
+                    {{ item.time }}
+                  </td>
+                  <td>
+                    {{ item.video_url }}
+                  </td>
+                  <td>
+                    {{ item.section_id }}
                   </td>
                   <td>
                   </td>
@@ -59,15 +66,9 @@
                         <i class="fas fa-ellipsis-v"></i>
                       </a>
                       <div ngbDropdownMenu class=" dropdown-menu-right dropdown-menu-arrow">
-<<<<<<< HEAD
                         <a class="dropdown-item" [routerLink]="'/system-admin/lesson/{id}/edit'"
                           href="javascript:void(0)">Xem</a>
                         <a class="dropdown-item" routerLink="/system-admin/lesson/new">Cập nhật</a>
-=======
-                        <a class="dropdown-item" [routerLink]="'/system-admin/category/{id}/edit'"
-                          href="javascript:void(0)">Xem</a>
-                        <a class="dropdown-item" href="javascript:void(0)">Cập nhật</a>
->>>>>>> b9c3133b02afe90fbb4b10f36ef61b822357fba3
                         <a class="dropdown-item" href="javascript:void(0)">Xóa</a>
                       </div>
                     </div>
@@ -79,21 +80,17 @@
           <div class="card-footer py-4">
             <nav aria-label="...">
               <ul class="pagination justify-content-end mb-0">
-                <li class="page-item disabled">
-                  <a class="page-link" href="javascript:void(0)" tabindex="-1">
+                <li class="page-item" [class.disabled]="page === 0">
+                  <a class="page-link" href="javascript:void(0)" tabindex="-1" (click)="navigateToPage(page - 1)">
                     <i class="fas fa-angle-left"></i>
                     <span class="sr-only">Previous</span>
                   </a>
                 </li>
-                <li class="page-item active">
-                  <a class="page-link" href="javascript:void(0)">1</a>
+                <li class="page-item" *ngFor="let i of getPageArray(); let index = index" [class.disabled]="i === page">
+                  <a class="page-link" href="javascript:void(0)" (click)="navigateToPage(i)">{{i}}</a>
                 </li>
-                <li class="page-item">
-                  <a class="page-link" href="javascript:void(0)">2 <span class="sr-only">(current)</span></a>
-                </li>
-                <li class="page-item"><a class="page-link" href="javascript:void(0)">3</a></li>
-                <li class="page-item">
-                  <a class="page-link" href="javascript:void(0)">
+                <li class="page-item" [class.disabled]="page === totalPages">
+                  <a class="page-link" href="javascript:void(0)" (click)="navigateToPage(page + 1)">
                     <i class="fas fa-angle-right"></i>
                     <span class="sr-only">Next</span>
                   </a>
