--- a/src/app/pages/lesson/update/update.lesson.component.html
+++ b/src/app/pages/lesson/update/update.lesson.component.html
@@ -1,11 +1,8 @@
-<div
-  class="header pb-8 pt-5 pt-lg-8 d-flex align-items-center"
-  style="
+<div class="header pb-8 pt-5 pt-lg-8 d-flex align-items-center" style="
     min-height: 200px;
     background-size: cover;
     background-position: center top;
-  "
->
+  ">
   <!-- Mask -->
   <span class="mask bg-gradient-danger opacity-8"></span>
 </div>
@@ -18,77 +15,65 @@
             <h3 class="mb-0">Create/Update Lesson</h3>
           </div>
           <div class="col-4 text-right">
-            <a href="/#/system-admin/lesson" class="btn btn-sm btn-info mr-4"
-              >Back</a
-            >
-            <a
-              href="javascript:void(0)"
-              class="btn btn-sm btn-default float-right"
-              >Save</a
-            >
+            <a href="/#/system-admin/lesson" class="btn btn-sm btn-info mr-4">Back</a>
+            <a href="javascript:void(0)" class="btn btn-sm btn-default float-right">Save</a>
           </div>
         </div>
       </div>
       <div class="card-body">
         <form>
-          <div class="pl-lg-4">
+          <div class="pl-lg-12">
             <div class="row">
-              <div class="col-md-12"></div>
-              <div class="col-md-12">
-                <div class="form-group">
-                  <label class="form-control-label" for="input-section"
-                    >Section</label> <select id="section" class="form-control" [(ngModel)]="selectedSection">
-                    <option value="">Select Section</option>
-                  </select>
-                </div>
-              </div>
-              <div class="col-lg-6">
-                <div class="form-group">
-                  <label class="form-control-label" for="input-id">ID :</label>
-                  <input type="text" id="input-id" class="form-control form-control-alternative" placeholder="ID Lesson">
-                </div>
-              </div>
-              <div class="col-lg-6">
-                <div class="form-group">
-                    <label class="form-control-label" for="input-title">Title :</label>
-                    <input type="text" id="input-title" class="form-control form-control-alternative" placeholder="Title">
+              <div class="col-md-6">
+                <div class="col-lg-12">
+                  <div class="form-group text-center">
+                    <video id="video-player" width="640" height="480" controls>
+                      <source id="video-source" type="video/mp4">
+                      Your browser does not support the video tag.
+                    </video>
                   </div>
-              </div>
-              <div class="col-lg-6">
-                <div class="form-group">
-                    <label class="form-control-label" for="input-time">Time :</label>
-                    <input type="text" id="input-time" class="form-control form-control-alternative" placeholder="Time Lesson">
-                  </div>
-              </div>
-              <div class="col-lg-6">
-                <div class="form-group">
+                  <div class="form-group">
                     <label class="form-control-label" for="input-url">URL :</label>
-                    <input type="text" id="input-url" class="form-control form-control-alternative" placeholder="URL Lesson">
+                    <input type="text" id="input-url" class="form-control form-control-alternative"
+                      placeholder="URL Lesson">
                   </div>
+                  <div class="form-group text-right">
+                    <button id="cancel-button" class="btn btn-sm btn-default">Hủy</button>
+                    <button id="choose-button" class="btn btn-sm btn-info float-right mr-4">Chọn</button>
+                  </div>
+                </div>
               </div>
-              <div class="col-lg-6">
-                <div class="form-group">
-                    <label class="form-control-label" for="input-questionAndAnswer">Question And Answer :</label>
-                    <input type="text" id="input-questionAndAnswer" class="form-control form-control-alternative" placeholder="Question And Answer">
+
+              <div class="col-md-4">
+                <div class="col-lg-12">
+                  <div class="form-group" style="display: none;">
+                    <label class="form-control-label" for="input-id">ID :</label>
+                    <input type="text" id="input-id" class="form-control form-control-alternative"
+                      placeholder="ID Lesson" formControlName="id">
                   </div>
-              </div>
-              <div class="col-lg-6">
-                <div class="form-group">
-                    <label class="form-control-label" for="input-overView">Over View :</label>
-                    <input type="text" id="input-overView" class="form-control form-control-alternative" placeholder="OverView">
+                </div>
+                <div class="col-lg-12">
+                  <div class="form-group">
+                    <label class="form-control-label" for="input-title">Title :</label>
+                    <input type="text" id="input-title" class="form-control form-control-alternative"
+                      placeholder="Title" formControlName="title">
                   </div>
-              </div>
-              <div class="col-lg-6">
-                <div class="form-group">
-                    <label class="form-control-label" for="input-note">Note :</label>
-                    <textarea  type="text" id="input-note" class="form-control form-control-alternative" placeholder="Note"></textarea>
+                </div>
+                <div class="col-lg-12">
+                  <div class="form-group">
+                    <label class="form-control-label" for="input-time">Time :</label>
+                    <input type="text" id="input-time" class="form-control form-control-alternative"
+                      placeholder="Time Lesson" formControlName="time">
                   </div>
-              </div>
-              <div class="col-lg-6">
-                <div class="form-group">
-                    <label class="form-control-label" for="input-comment">Comment :</label>
-                    <textarea  type="text" id="input-comment" class="form-control form-control-alternative" placeholder="Comment"></textarea>
+                </div>
+                <div class="col-md-12">
+                  <div class="form-group">
+                    <label class="form-control-label" for="input-section">Section</label> <select id="section"
+                      class="form-control" formControlName="section_id">
+                      <option value="" *ngFor="let item of dataSection">{{item.title}}</option>
+                    </select>
                   </div>
+                </div>
               </div>
             </div>
           </div>
