--- a/src/app/pages/lesson/update/update.lesson.component.html
+++ b/src/app/pages/lesson/update/update.lesson.component.html
@@ -15,7 +15,7 @@
             <h3 class="mb-0">Create/Update Lesson</h3>
           </div>
           <div class="col-4 text-right">
-            <a href="/#/system-admin/lesson" class="btn btn-sm btn-info mr-4">Back</a>
+            <a routerLink="/system-admin/lesson" class="btn btn-sm btn-info mr-4">Back</a>
             <a href="javascript:void(0)" class="btn btn-sm btn-default float-right">Save</a>
           </div>
         </div>
@@ -25,25 +25,21 @@
           <div class="pl-lg-12">
             <div class="row">
               <div class="col-md-6">
-                <div class="col-lg-12">
-                  <div class="form-group text-center">
-                    <video id="video-player" width="640" height="480" controls>
-                      <source id="video-source" type="video/mp4">
-                      Your browser does not support the video tag.
-                    </video>
-                  </div>
-                  <div class="form-group">
-                    <label class="form-control-label" for="input-url">URL :</label>
-                    <input type="text" id="input-url" class="form-control form-control-alternative"
-                      placeholder="URL Lesson">
-                  </div>
-                  <div class="form-group text-right">
-                    <button id="cancel-button" class="btn btn-sm btn-default">Hủy</button>
-                    <button id="choose-button" class="btn btn-sm btn-info float-right mr-4">Chọn</button>
+                <div class="form-group text-center">
+                  <video id="video-player" style="width: 100%;" height="auto" controls>
+                    <source id="video-source" type="video/mp4">
+                    Your browser does not support the video tag.
+                  </video>
+                  <div class="progress mt-3">
+                    <div class="progress-bar" role="progressbar" style="width: 25%;" aria-valuenow="25"
+                      aria-valuemin="0" aria-valuemax="100">25%</div>
                   </div>
                 </div>
+                <div class="form-group text-right">
+                  <button id="cancel-button" class="btn btn-sm btn-default">Hủy</button>
+                  <button id="choose-button" class="btn btn-sm btn-info float-right mr-4">Chọn</button>
+                </div>
               </div>
-
               <div class="col-md-4">
                 <div class="col-lg-12">
                   <div class="form-group" style="display: none;">
@@ -62,7 +58,7 @@
                 <div class="col-lg-12">
                   <div class="form-group">
                     <label class="form-control-label" for="input-time">Time :</label>
-                    <input type="text" id="input-time" class="form-control form-control-alternative"
+                    <input type="time" id="input-time" class="form-control form-control-alternative"
                       placeholder="Time Lesson" formControlName="time">
                   </div>
                 </div>
@@ -70,7 +66,7 @@
                   <div class="form-group">
                     <label class="form-control-label" for="input-section">Section</label> <select id="section"
                       class="form-control" formControlName="section_id">
-                      <option value="" *ngFor="let item of dataSection">{{item.title}}</option>
+                      <option value="" *ngFor="let item of section" [value]="item.id">{{item.title}}</option>
                     </select>
                   </div>
                 </div>
