--- a/src/app/pages/user-profile/list/user-profile.component.html
+++ b/src/app/pages/user-profile/list/user-profile.component.html
@@ -17,7 +17,7 @@
               <button class="btn btn-info" (click)="searchUsers()">Tìm kiếm</button>
             </div>
             <div class="text-right">
-              <a [routerLink]="'/system-admin/user-profile/new'" class="btn btn-sm btn-primary">Thêm mới</a>
+              <a [routerLink]="['/system-admin/user-profile/update']" class="btn btn-sm btn-primary">Thêm mới</a>
             </div>
           </div>
         </div>
@@ -39,7 +39,7 @@
                 <th scope="row">
                   <div class="media align-items-center">
                     <div class="media-body">
-                      <span class="mb-0">{{ u.fullName }}</span>
+                      <span class="mb-0">{{ u.fullname }}</span>
                     </div>  
                   </div>
                 </th>
@@ -47,18 +47,18 @@
                   {{ u.email }}
                 </td>
                 <td>
-                  {{ u.phoneNumber }}
+                  {{ u.phone_number }}
                 </td>
                 <td>
-                  {{ u.dateOfBirth }}
+                  {{ u.date_of_birth }}
                 </td>
                 <td>
-                  <span class="badge badge-dot mr-4">
+                  <span class="badge badge-dot mr-4" style="color: black; font-size: 13px;">
                     <i class="bg-warning"></i>
                     {{u.address}}
                   </span>
                 </td>
-                <td [ngSwitch]="u.role_id">
+                <td [ngSwitch]="u.role_id.id">
                   <ng-container *ngSwitchCase="1">Admin</ng-container>
                   <ng-container *ngSwitchCase="2">User</ng-container>
                   <ng-container *ngSwitchCase="3">Teacher</ng-container>
@@ -70,9 +70,8 @@
                       <i class="fas fa-ellipsis-v"></i>
                     </a>
                     <div ngbDropdownMenu class=" dropdown-menu-right dropdown-menu-arrow">
-                      <a class="dropdown-item" [routerLink]="'/system-admin/payment/{id}/edit'"
-                        href="javascript:void(0)">Xem</a>
-                      <a class="dropdown-item" routerLink="/system-admin/payment/new">Cập nhật</a>
+                      <a class="dropdown-item" [routerLink]="'/system-admin/user-profile/update'" href="">Xem</a>    
+                      <a class="dropdown-item" [routerLink]="['/system-admin/user-profile', u.id , 'edit']">Cập nhật</a>
                       <a class="dropdown-item" href="javascript:void(0)">Xóa</a>
                     </div>
                   </div>
