--- a/src/app/pages/user-profile/user-update/user-update.component.html
+++ b/src/app/pages/user-profile/user-update/user-update.component.html
@@ -14,63 +14,7 @@
   </div>
   <div class="container-fluid mt--7">
     <div class="row">
-      <div class="col-xl-4 order-xl-2 mb-5 mb-xl-0">
-        <div class="card card-profile shadow">
-          <div class="row justify-content-center">
-            <div class="col-lg-3 order-lg-2">
-              <div class="card-profile-image">
-                <a href="javascript:void(0)">
-                  <img src="assets/img/theme/team-4-800x800.jpg" class="rounded-circle">
-                </a>
-              </div>
-            </div>
-          </div>
-          <div class="card-header text-center border-0 pt-8 pt-md-4 pb-0 pb-md-4">
-            <div class="d-flex justify-content-between">
-              <a href="javascript:void(0)" class="btn btn-sm btn-info mr-4">Connect</a>
-              <a href="javascript:void(0)" class="btn btn-sm btn-default float-right">Message</a>
-            </div>
-          </div>
-          <div class="card-body pt-0 pt-md-4">
-            <div class="row">
-              <div class="col">
-                <div class="card-profile-stats d-flex justify-content-center mt-md-5">
-                  <div>
-                    <span class="heading">22</span>
-                    <span class="description">Friends</span>
-                  </div>
-                  <div>
-                    <span class="heading">10</span>
-                    <span class="description">Photos</span>
-                  </div>
-                  <div>
-                    <span class="heading">89</span>
-                    <span class="description">Comments</span>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="text-center">
-              <h3>
-                Jessica Jones<span class="font-weight-light">, 27</span>
-              </h3>
-              <div class="h5 font-weight-300">
-                <i class="ni location_pin mr-2"></i>Bucharest, Romania
-              </div>
-              <div class="h5 mt-4">
-                <i class="ni business_briefcase-24 mr-2"></i>Solution Manager - Creative Tim Officer
-              </div>
-              <div>
-                <i class="ni education_hat mr-2"></i>University of Computer Science
-              </div>
-              <hr class="my-4" />
-              <p>Ryan — the name taken by Melbourne-raised, Brooklyn-based Nick Murphy — writes, performs and records all of his own music.</p>
-              <a href="javascript:void(0)">Show more</a>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="col-xl-8 order-xl-1">
+      <div class="col-xl-12 order-xl-1">
         <div class="card bg-secondary shadow">
           <div class="card-header bg-white border-0">
             <div class="row align-items-center">
@@ -90,13 +34,13 @@
                   <div class="col-lg-6">
                     <div class="form-group">
                       <label class="form-control-label" for="input-username">Họ và tên</label>
-                      <input type="text" id="input-username" class="form-control form-control-alternative" placeholder="Họ và tên" value="">
+                      <input type="text" formControlName="fullname" id="input-username" class="form-control form-control-alternative" placeholder="Họ và tên" value="">
                     </div>
                   </div>
                   <div class="col-lg-6">
                     <div class="form-group">
                       <label class="form-control-label" for="input-email">Email</label>
-                      <input type="email" id="input-email" class="form-control form-control-alternative" placeholder="example@example.com">
+                      <input type="email" formControlName="email" id="input-email" class="form-control form-control-alternative" placeholder="example@example.com">
                     </div>
                   </div>
                 </div>
@@ -104,18 +48,18 @@
                   <div class="col-lg-6">
                     <div class="form-group">
                       <label class="form-control-label" for="input-first-name">Số điện thoại</label>
-                      <input type="text" id="input-first-name" class="form-control form-control-alternative" placeholder="+84 123456789" value="">
+                      <input type="text" formControlName="phone_number" id="input-first-name" class="form-control form-control-alternative" placeholder="+84 123456789" value="">
                     </div>
                   </div>
                   <div class="col-lg-6">
                     <div class="form-group">
                       <label class="form-control-label" for="input-last-name">Ngày sinh</label>
-                      <input type="date" id="input-last-name" class="form-control form-control-alternative">
+                      <input type="date" formControlName="date_of_birth" id="input-last-name" class="form-control form-control-alternative">
                     </div>
                   </div>
                 </div>
               </div>
-              <hr class="my-4" />
+              <!-- <hr class="my-4" /> -->
               <!-- Address -->
               <h6 class="heading-small text-muted mb-4">Contact information</h6>
               <div class="pl-lg-4">
@@ -123,7 +67,7 @@
                   <div class="col-md-12">
                     <div class="form-group">
                       <label class="form-control-label" for="input-address">Địa chỉ</label>
-                      <input id="input-address" class="form-control form-control-alternative" placeholder="TP. Đà Nẵng, Việt Nam" value="" type="text">
+                      <input id="input-address" formControlName="address" class="form-control form-control-alternative" placeholder="TP. Đà Nẵng, Việt Nam" value="" type="text">
                     </div>
                   </div>
                 </div>
@@ -148,13 +92,30 @@
                   </div>
                 </div>
               </div>
-              <hr class="my-4" />
+              <h6 class="heading-small text-muted mb-4">Security</h6>
+              <div class="pl-lg-4">
+              <div class="row">
+                <div class="col-lg-6">
+                  <div class="form-group">
+                    <label class="form-control-label" for="input-country">Mật khẩu</label>
+                    <input type="password" id="input-country" class="form-control form-control-alternative" placeholder="******" value="">
+                  </div>
+                </div>
+                <div class="col-lg-6">
+                  <div class="form-group">
+                      <label class="form-control-label" for="input-country">Xác nhận mật khẩu</label>
+                      <input type="password" id="input-postal-code" class="form-control form-control-alternative" placeholder="******">
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <!-- <hr class="my-4" /> -->
               <!-- Description -->
               <h6 class="heading-small text-muted mb-4">About me</h6>
               <div class="pl-lg-4">
                 <div class="form-group">
                   <label>Giới thiệu</label>
-                  <textarea rows="4" class="form-control form-control-alternative" placeholder="A few words about you ..."></textarea>
+                  <textarea rows="4" class="form-control form-control-alternative" placeholder="Nhập vào đây vài từ để giới thiệu về bạn ..."></textarea>
                 </div>
               </div>
             </form>
