--- a/src/app/pages/user-profile/list/user-profile.component.html
+++ b/src/app/pages/user-profile/list/user-profile.component.html
@@ -17,9 +17,6 @@
                 (change)="searchUsers()">
               <button class="btn btn-info" (click)="searchUsers()">Tìm kiếm</button>
             </div>
-            <div class="text-right">
-              <a [routerLink]="['/system-admin/user-profile/update']" class="btn btn-sm btn-primary">Thêm mới</a>
-            </div>
           </div>
         </div>
 
@@ -71,9 +68,8 @@
                       <i class="fas fa-ellipsis-v"></i>
                     </a>
                     <div ngbDropdownMenu class=" dropdown-menu-right dropdown-menu-arrow">
-                      <a class="dropdown-item" [routerLink]="'/system-admin/payment/{id}/edit'"
-                        href="javascript:void(0)">Xem</a>
-                      <a class="dropdown-item" routerLink="/system-admin/payment/new">Cập nhật</a>
+                      <a class="dropdown-item" [routerLink]="['/system-admin/user-profile', u.id ,'edit']">Cập
+                        nhật</a>
                       <a class="dropdown-item" href="javascript:void(0)">Xóa</a>
                     </div>
                   </div>
