--- a/src/app/pages/discount/list/discount.component.html
+++ b/src/app/pages/discount/list/discount.component.html
@@ -44,7 +44,7 @@
               </tr>
             </thead>
             <tbody>
-              <tr *ngFor="let item of dataDiscounts">
+              <tr *ngFor="let item of dataPage">
                 <td style="display: none;">
                   <div class="media align-items-center">
                     <div class="media-body">
@@ -82,17 +82,17 @@
         <div class="card-footer py-4">
           <nav aria-label="...">
             <ul class="pagination justify-content-end mb-0">
-              <li class="page-item">
-                <a class="page-link" (click)="previousPage()">
+              <li class="page-item" [class.disabled]="page === 0">
+                <a class="page-link" tabindex="-1" (click)="navigateToPage(page - 1)">
                   <i class="fas fa-angle-left"></i>
                   <span class="sr-only">Previous</span>
                 </a>
               </li>
-              <!-- <li class="page-item active">
-                <span class="page-link">{{ currentPage }}</span>
-              </li> -->
-              <li class="page-item">
-                <a class="page-link" (click)="nextPage()">
+              <li class="page-item" *ngFor="let i of getPageArray(); let index = index" [class.active]="i === page">
+                <a class="page-link" (click)="navigateToPage(i)">{{ i }}</a>
+              </li>
+              <li class="page-item" [class.disabled]="page === totalPages">
+                <a class="page-link" (click)="navigateToPage(page + 1)">
                   <i class="fas fa-angle-right"></i>
                   <span class="sr-only">Next</span>
                 </a>
