--- a/src/app/pages/section/list/section.component.html
+++ b/src/app/pages/section/list/section.component.html
@@ -42,7 +42,7 @@
                 </tr>
               </thead>
               <tbody>
-                <tr *ngFor="let item of dataSection">
+                <tr *ngFor="let item of dataPage">
                   <th scope="row">
                     <div class="media align-items-center">
                       <div class="media-body">
@@ -98,21 +98,17 @@
           <div class="card-footer py-4">
             <nav aria-label="...">
               <ul class="pagination justify-content-end mb-0">
-                <li class="page-item disabled">
-                  <a class="page-link" href="javascript:void(0)" tabindex="-1">
+                <li class="page-item" [class.disabled]="page === 0">
+                  <a class="page-link" tabindex="-1" (click)="navigateToPage(page - 1)">
                     <i class="fas fa-angle-left"></i>
                     <span class="sr-only">Previous</span>
                   </a>
                 </li>
-                <li class="page-item active">
-                  <a class="page-link" href="javascript:void(0)">1</a>
+                <li class="page-item" *ngFor="let i of getPageArray(); let index = index" [class.active]="i === page">
+                  <a class="page-link" (click)="navigateToPage(i)">{{ i }}</a>
                 </li>
-                <li class="page-item">
-                  <a class="page-link" href="javascript:void(0)">2 <span class="sr-only">(current)</span></a>
-                </li>
-                <li class="page-item"><a class="page-link" href="javascript:void(0)">3</a></li>
-                <li class="page-item">
-                  <a class="page-link" href="javascript:void(0)">
+                <li class="page-item" [class.disabled]="page === totalPages">
+                  <a class="page-link" (click)="navigateToPage(page + 1)">
                     <i class="fas fa-angle-right"></i>
                     <span class="sr-only">Next</span>
                   </a>
