--- a/src/app/pages/course/list/course.component.html
+++ b/src/app/pages/course/list/course.component.html
@@ -52,7 +52,7 @@
                 <td style="display: none;">{{ item.start_time | date: 'dd/MM/yyyy' }}</td>
                 <td style="display: none;">{{ item.end_time | date: 'dd/MM/yyyy' }}</td>
                 <td style="display: none;">{{ item.user_id }}</td>
-                <td>{{ item.category_name }}</td>
+                <td>{{ item.category_id }}</td>
                 <td>
                   <span class="badge badge-dot mr-4 align-items-center" [style.color]="'black'">
                     <i [ngClass]="{'bg-warning': !item.is_delete, 'bg-success': item.is_delete}"></i>
@@ -79,20 +79,20 @@
           <nav aria-label="...">
             <ul class="pagination justify-content-end mb-0">
               <li class="page-item disabled">
-                <a class="page-link" href="javascript:void(0)" tabindex="-1">
+                <a class="page-link" tabindex="-1">
                   <i class="fas fa-angle-left"></i>
                   <span class="sr-only">Previous</span>
                 </a>
               </li>
               <li class="page-item active">
-                <a class="page-link" href="javascript:void(0)">1</a>
+                <a class="page-link">1</a>
               </li>
               <li class="page-item">
-                <a class="page-link" href="javascript:void(0)">2 <span class="sr-only">(current)</span></a>
+                <a class="page-link" >2 <span class="sr-only">(current)</span></a>
               </li>
-              <li class="page-item"><a class="page-link" href="javascript:void(0)">3</a></li>
+              <li class="page-item"><a class="page-link">3</a></li>
               <li class="page-item">
-                <a class="page-link" href="javascript:void(0)">
+                <a class="page-link">
                   <i class="fas fa-angle-right"></i>
                   <span class="sr-only">Next</span>
                 </a>
